--- a/.gitignore
+++ b/.gitignore
@@ -1,122 +1,8 @@
-
 .qmake.stash
-debug/main.o
-debug/mainwindow.o
-debug/Mark_1.exe
-debug/moc_mainwindow.cpp
-debug/moc_mainwindow.o
-debug/moc_predefs.h
-debug/neuron.o
-ui_mainwindow.h
-Mark_1.pro.user.b922238
-Mark_1.pro.user.fee947c.20
-Mark_1.pro.user
+debug/**
+ui_*
+moc_*
 Makefile.Debug
 Makefile.Release
 Makefile
-Mark_1.pro.user.f7ad154.4.8-pre1
-<<<<<<< HEAD
-Mark_1.pro.user.fee947c
-Weights/A/1.png
-=======
->>>>>>> 51c943add91101e131e298b10dfb09bbf06d7dc3
-Weights/A/1.png
-Weights/A/2.png
-Weights/A/3.png
-Weights/B/1.png
-Weights/B/2.png
-Weights/B/3.png
-Weights/C/1.png
-Weights/C/2.png
-Weights/C/3.png
-Weights/D/1.png
-Weights/D/2.png
-Weights/D/3.png
-Weights/E/1.png
-Weights/E/2.png
-Weights/E/3.png
-Weights/F/1.png
-Weights/F/2.png
-Weights/F/3.png
-Weights/G/1.png
-Weights/G/2.png
-Weights/G/3.png
-Data/Weights/z.csv
-Data/Weights/y.csv
-Data/Weights/x.csv
-Data/Weights/w.csv
-Data/Weights/v.csv
-Data/Weights/u.csv
-debug/moc_neuron.cpp
-debug/moc_neuron.o
-debug/moc_SaveDataFiles.cpp
-debug/moc_SaveDataFiles.o
-debug/SaveDataFiles.o
-Img/a/a (350).png
-Img/a/a (35).png
-Img/a/a (349).png
-Img/a/a (348).png
-Img/a/a (347).png
-Img/a/a (346).png
-Img/a/a (345).png
-Img/a/a (344).png
-Img/a/a (343).png
-Img/a/a (342).png
-Img/a/a (341).png
-Img/a/a (340).png
-Img/a/a (34).png
-Img/a/a (339).png
-Img/a/a (338).png
-Img/a/a (335).png
-Img/a/a (334).png
-Img/a/a (333).png
-Img/a/a (332).png
-Img/a/a (331).png
-Img/a/a (330).png
-Img/a/a (33).png
-Img/a/a (329).png
-Img/a/a (328).png
-Img/a/a (327).png
-Img/a/a (326).png
-Img/a/a (325).png
-Img/a/a (324).png
-Img/a/a (322).png
-Img/a/a (321).png
-Img/a/a (320).png
-Img/a/a (32).png
-Img/a/a (319).png
-Img/a/a (318).png
-Img/a/a (317).png
-Img/a/a (316).png
-Img/a/a (315).png
-Img/a/a (314).png
-Img/a/a (313).png
-Img/a/a (312).png
-Img/a/a (311).png
-Img/a/a (310).png
-Data/Weights/a.csv
-Data/Weights/b.csv
-Data/Weights/c.csv
-Data/Weights/d.csv
-Data/Weights/e.csv
-Data/Weights/f.csv
-Data/Weights/g.csv
-Data/Weights/h.csv
-Data/Weights/i.csv
-Data/Weights/j.csv
-Data/Weights/k.csv
-Data/Weights/l.csv
-Data/Weights/m.csv
-Data/Weights/n.csv
-Data/Weights/o.csv
-Data/Weights/p.csv
-Data/Weights/q.csv
-Data/Weights/r.csv
-Data/Weights/s.csv
-Data/Weights/t.csv
-Img/a/a (1).png
-Img/a/a (10).png
-Img/a/a (100).png
-Img/a/a (1000).png
-Img/a/a (1001).png
-Img/a/a (1002).png
+Mark_1.pro.us*
